--- a/eShop.AdminApp/Views/Home/Index.cshtml
+++ b/eShop.AdminApp/Views/Home/Index.cshtml
@@ -9,13 +9,7 @@
 }
 
 @section Scripts{
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/paginationjs/2.1.4/pagination.css" rel="stylesheet" />
-    <script src="~/js/paging/pagination.min.js"></script>
-    <script src="~/js/paging/SetupPaging.js"></script>
-    <script>
-        var paging = new PagingSetup();
-        paging.initialize();
-    </script>
+  
 
 }
 
@@ -38,12 +32,7 @@
             </div>
         </div><!-- /.container-fluid -->
     </section>
-    @*<div id="wrapper">
-            <section>
-                <div class="data-container"></div>
-                <div id="demo"></div>
-            </section>
-        </div>*@
+
     <!-- Main content -->
     <section class="content">
         <div class="container-fluid">
@@ -94,18 +83,19 @@
                         <a asp-action="Index" asp-controller="Product" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
+
                 <div class="col-lg-3 col-6">
                     <!-- small box -->
-                    <div class="small-box bg-danger">
+                    <div class="small-box bg-success">
                         <div class="inner">
-                            <h3>@Model.TotalProducts</h3>
+                            <h3>@Model.TotalContact</h3>
 
-                            <p>Tổng sản phẩm hiện có</p>
+                            <p>Thông tin liên lạc khách hàng</p>
                         </div>
                         <div class="icon">
-                            <i class="ion ion-pie-graph"></i>
+                            <i class="ion ion-stats-bars"></i>
                         </div>
-                        <a asp-action="Index" asp-controller="Product" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
+                        <a asp-action="Index" asp-controller="Order" class="small-box-footer">More info <i class="fas fa-arrow-circle-right"></i></a>
                     </div>
                 </div>
                 <!-- ./col -->
@@ -125,8 +115,8 @@
                                     <i class="fas fa-chart-pie mr-1"></i>
                                     <h3 class="card-title">
                                         <a href="/Order/GetRevenue">
-                                        Doanh Thu
-                                        </a> 
+                                            Doanh Thu
+                                        </a>
                                     </h3>
                                 </div>
                             </div>
@@ -163,28 +153,29 @@
                                         <th>More</th>
                                     </tr>
                                 </thead>
-                                <tbody>
-                                    @foreach (var item in Model.ListProductTopSelling.Items)
-                                    {
-                                        <tr>
-                                            <td>
-                                                <img src="@(Configuration["BaseAddress"]+@item.ThumbnailImage)" alt="@item.Name " class="img-circle img-size-32 mr-2">
-                                                @item.Name
-                                            </td>
-                                            <td>@item.Stock</td>
-                                            <td>$@item.Price</td>
-                                            <td>
-                                                <a asp-action="Details" asp-controller="Product" asp-route-id="@item.Id" class="text-muted">
-                                                    <i class="fas fa-search"></i>
-                                                </a>
-                                            </td>
-                                        </tr>
-                                    }
+                                <tbody id="productTopBody">
+                                    @*@foreach (var item in Model.ListProductTopSelling.Items)
+                                        {
+                                            <tr>
+                                                <td>
+                                                    <img src="@(Configuration["BaseAddress"]+@item.ThumbnailImage)" alt="@item.Name " class="img-circle img-size-32 mr-2">
+                                                    @item.Name
+                                                </td>
+                                                <td>@item.Stock</td>
+                                                <td>$@item.Price</td>
+                                                <td>
+                                                    <a asp-action="Details" asp-controller="Product" asp-route-id="@item.Id" class="text-muted">
+                                                        <i class="fas fa-search"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }*@
                                 </tbody>
                             </table>
+                            <div class="Pager paginationPager"></div>
                         </div>
 
-                        @await Component.InvokeAsync("Pager", Model.ListProductTopSelling.Paging)
+                        @*@await Component.InvokeAsync("Pager", Model.ListProductTopSelling.Paging)*@
                     </div>
                 </div>
             </div>
@@ -321,4 +312,20 @@ var options = {
 
             });
         });
+</script>
+
+<script id="tplProductTop" type="x-tmpl-mustache">
+     <tr>
+             <td>
+                 <img src="https://localhost:5001{{ThumbnailImage}}" alt="" class="img-circle img-size-32 mr-2">
+               {{Name}}
+             </td>
+             <td>{{Stock}}</td>
+             <td>${{Price}}</td>
+             <td>
+                 <a asp-action="Details" asp-controller="Product" asp-route-id="{{Id}}" class="text-muted">
+                     <i class="fas fa-search"></i>
+                 </a>
+             </td>
+         </tr>
 </script>
