--- a/eShop.AdminApp/Views/Product/Index.cshtml
+++ b/eShop.AdminApp/Views/Product/Index.cshtml
@@ -42,7 +42,7 @@
                         <form asp-action="Index" method="get">
                             <div class="row">
                                 <div class=" col-md-3">
-                                    <input type="text" value="@ViewBag.Keyword" name="keyword" class="form-control" />
+                                    <input type="text" id="Keyword" value="@ViewBag.Keyword" name="keyword" class="form-control" />
                                 </div>
                                 <div class=" col-md-3">
                                     <select name="categoryId" onchange="this.form.submit()" asp-items="@ViewBag.Categories" class="form-control">
@@ -98,50 +98,90 @@
                             <th></th>
                         </tr>
                     </thead>
-                    <tbody>
-                        @foreach (var item in Model.Items)
-                        {
-                            <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Id)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    <div class="AddingCommas">
-                                        @Html.DisplayFor(modelItem => item.OriginalPrice)
-                                    </div>
-                                </td>
-                                <td>
-                                    <div class="AddingCommas">
+                    <tbody id="productTopBody">
+                        @*@foreach (var item in Model.Items)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        <div class="AddingCommas">
+                                            @Html.DisplayFor(modelItem => item.OriginalPrice)
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="AddingCommas">
 
-                                        @Html.DisplayFor(modelItem => item.Price)
-                                    </div>
-                                </td>
-                                @*<td>
-                                        @Html.DisplayFor(modelItem => item.Categories)
-                                    </td>*@
-                                <td>
-                                    <div class="AddingCommas">
-                                        @Html.DisplayFor(modelItem => item.Stock)
-                                    </div>
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ViewCount)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Sửa", "Edit", new { id = item.Id }) |
-                                    @Html.ActionLink("Xem", "Details", new { id = item.Id }) |
-                                    @Html.ActionLink("Xoá", "Delete", new { id = item.Id }) |
-                                    @Html.ActionLink("Gán danh mục", "CategoryAssign", new { id = item.Id })
-                                </td>
-                            </tr>
-                        }
+                                            @Html.DisplayFor(modelItem => item.Price)
+                                        </div>
+                                    </td>
+
+                                    <td>
+                                        <div class="AddingCommas">
+                                            @Html.DisplayFor(modelItem => item.Stock)
+                                        </div>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ViewCount)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Sửa", "Edit", new { id = item.Id }) |
+                                        @Html.ActionLink("Xem", "Details", new { id = item.Id }) |
+                                        @Html.ActionLink("Xoá", "Delete", new { id = item.Id }) |
+                                        @Html.ActionLink("Gán danh mục", "CategoryAssign", new { id = item.Id })
+                                    </td>
+                                </tr>
+                            }*@
                     </tbody>
                 </table>
+                <div class="Pager paginationPager"></div>
             </div>
-            @await Component.InvokeAsync("Pager", Model)
+            @*@await Component.InvokeAsync("Pager", Model)*@
         </div>
     </section>
 </div>
+
+<script id="tplProductTop" type="x-tmpl-mustache">
+
+    <tr>
+        <td>
+            {{ id }}
+        </td>
+        <td>
+            {{ Name }}
+        </td>
+        <td>
+            <div class="AddingCommas">
+                {{ OriginalPrice }}
+            </div>
+        </td>
+        <td>
+            <div class="AddingCommas">
+                ${{ Price }}
+            </div>
+        </td>
+        @*
+        <td>
+      @Html.DisplayFor(modelItem => item.Categories)
+        </td>
+        *@
+        <td>
+            <div class="AddingCommas">
+                {{ Stock }}
+            </div>
+        </td>
+        <td>
+            {{ ViewCount }}
+        </td>
+        <td>
+            <a href="/Product/Edit/{{id}}">Sửa</a> |
+            <a href="/Product/Details/{{id}}">Xem</a> |
+            <a href="/Product/Delete/{{id}}">Xoá</a> |
+            <a href="/Product/CategoryAssign/{{id}}">Gán danh mục</a>
+        </td>
+    </tr>
+</script>
