--- a/eShop.WebApp/Views/Product/Detail.cshtml
+++ b/eShop.WebApp/Views/Product/Detail.cshtml
@@ -61,16 +61,18 @@
                 <span>
                     <span>$@Model.Product.Price</span>
                     <label>Quantity:</label>
-                    <input type="text" value="@Model.Product.Stock" />
-                    @{var url = $"/{culture}/{_loc["productUrl"]}/{Model.Product.Id}";}
-                    @if (Model.Product.Stock > 0) { 
-                    <a href="#" data-id="@Model.Product.Id" class="btn btn-fefault cart btn-add-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                    
+                    <input type="text" disabled value="@Model.Product.Stock" />
+                    @{var url = $"/{culture}/{_loc["productUrl"]}/{Model.Product.Id}";
                     }
-            else
-            {
-                <span style="color:red">Sản phẩm đã hết hàng</span>
-            }
+                    @if (Model.Product.Stock > 0)
+                    {
+                        <a href="#" data-id="@Model.Product.Id" class="btn btn-fefault cart btn-add-cart"><i class="fa fa-shopping-cart"></i>Add to cart</a>
+
+                    }
+                    else
+                    {
+                        <span style="color:red">Sản phẩm đã hết hàng</span>
+                    }
                 </span>
                 <p><b>Availability:</b>@(Model.Product.Stock > 0 ? " In Stock" : "Out of stock")</p>
                 <p><b>Condition:</b> New</p>
