--- a/eShop.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShop.AdminApp/Views/Shared/_Layout.cshtml
@@ -147,21 +147,13 @@
 
                         <ul class="nav nav-treeview">
                             <li class="nav-item has-treeview">
-                                <a href="#" class="nav-link">
+                                <a asp-controller="Contact" asp-action="Index"class="nav-link">
                                     <i class="nav-icon fas fa-copy"></i>
                                     <p>
-                                        Contact
+                                        Thông tin liên lạc
                                         <i class="right fas fa-angle-left"></i>
                                     </p>
-                                </a>
-                                <ul class="nav nav-treeview">
-                                    <li class="nav-item">
-                                        <a asp-controller="Contact" asp-action="Index" class="nav-link">
-                                            <i class="far fa-circle nav-icon"></i>
-                                            <p>Contact</p>
-                                        </a>
-                                    </li>
-                                </ul>
+                                </a>                               
                             </li>
                         </ul>
                     </li>
