--- a/eShop.AdminApp/Views/Contact/Edit.cshtml
+++ b/eShop.AdminApp/Views/Contact/Edit.cshtml
@@ -54,11 +54,9 @@
                 <hr />
                 <form asp-action="Edit" enctype="multipart/form-data" method="post">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <div class="form-group">
-                        <label asp-for="Id" class="control-label"></label>
-                        <input asp-for="Id" class="form-control" />
-                        <span asp-validation-for="Id" class="text-danger"></span>
-                    </div>
+                   
+                        <input asp-for="Id" type="hidden" />
+                       
                     <div class="form-group">
                         <label asp-for="Name" class="control-label"></label>
                         <input asp-for="Name" class="form-control" />
