--- a/eShop.WebApp/Views/Contact/Create.cshtml
+++ b/eShop.WebApp/Views/Contact/Create.cshtml
@@ -3,15 +3,17 @@
 @{
     ViewData["Title"] = "Create";
 }
+@section scripts{
 
+    <script src="/js/HiddenSibar.js"></script>
+    <script>
+        var hidden = new Hidden();
+        hidden.initialize();
+    </script>
+}
 <div id="contact-page" class="container">
     <div class="bg">
-        <div class="row">
-            <div class="col-sm-12">
-                <h2 class="title text-center">Contact <strong>Us</strong></h2>
-                <div id="gmap" class="contact-map">
-                </div>
-            </div>
+        <div class="row">          
         </div>
         <div class="row">
             <div class="col-sm-8">
@@ -35,7 +37,7 @@
                                 <option value='1'>True</option>
                                 <option value='0'>False</option>
                             </select>
-                           
+
                         </div>
                         <div class="form-group col-md-12">
                             <textarea name="message" asp-for="Message" id="message" required="required" class="form-control" rows="8" placeholder="Your Message Here"></textarea>
