--- a/eShop.AdminApp/Views/Product/Index.cshtml
+++ b/eShop.AdminApp/Views/Product/Index.cshtml
@@ -11,6 +11,8 @@
             $('#msgAlert').fadeOut('slow');
         }, 2000);
     </script>
+
+    <script src="~/js/controller/product/pagingProductController.js"></script>
 }
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
@@ -39,35 +41,28 @@
                         <a class="btn btn-success" asp-action="Create" asp-controller="Product">Tạo Mới </a>
                     </div>
                     <div class="col-md-6 col-xs-12">
-                        <form asp-action="Index" method="get">
+                        <form id="btnSearch">
                             <div class="row">
                                 <div class=" col-md-3">
                                     <input type="text" id="Keyword" value="@ViewBag.Keyword" name="keyword" class="form-control" />
                                 </div>
                                 <div class=" col-md-3">
-                                    <select name="categoryId" onchange="this.form.submit()" asp-items="@ViewBag.Categories" class="form-control">
+                                    @*<select id="selectCategoryId" name="categoryId" onchange="this.form.submit()" asp-items="@ViewBag.Categories" class="form-control">
+                                            <option>--chọn danh mục--</option>
+                                        </select>*@
+                                    <select id="selectCategoryId" name="categoryId" asp-items="@ViewBag.Categories" class="form-control">
                                         <option>--chọn danh mục--</option>
                                     </select>
                                 </div>
                                 <div class=" col-md-3">
                                     <button type="submit" class="btn btn-primary">Tìm</button>
-                                    <button type="button" onclick="window.location.href='/Product/Index'" class="btn btn-dark">Reset</button>
+                                    <button type="button" id="btnResetProduct" class="btn btn-dark">Reset</button>
                                 </div>
                             </div>
                         </form>
                     </div>
                 </div>
-                @* <div class="row">
 
-                        <div class="col-md-12 ">
-                            @if (ViewBag.SuccessMsg != null)
-                            {
-                                <div id="msgAlert" class="alert alert-success text-center" role="alert">
-                                    @ViewBag.SuccessMsg
-                                </div>
-                            }
-                        </div>
-                    </div> *@
                 <br />
 
                 <table class="table">
@@ -99,43 +94,6 @@
                         </tr>
                     </thead>
                     <tbody id="productTopBody">
-                        @*@foreach (var item in Model.Items)
-                            {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Id)
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.Name)
-                                    </td>
-                                    <td>
-                                        <div class="AddingCommas">
-                                            @Html.DisplayFor(modelItem => item.OriginalPrice)
-                                        </div>
-                                    </td>
-                                    <td>
-                                        <div class="AddingCommas">
-
-                                            @Html.DisplayFor(modelItem => item.Price)
-                                        </div>
-                                    </td>
-
-                                    <td>
-                                        <div class="AddingCommas">
-                                            @Html.DisplayFor(modelItem => item.Stock)
-                                        </div>
-                                    </td>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.ViewCount)
-                                    </td>
-                                    <td>
-                                        @Html.ActionLink("Sửa", "Edit", new { id = item.Id }) |
-                                        @Html.ActionLink("Xem", "Details", new { id = item.Id }) |
-                                        @Html.ActionLink("Xoá", "Delete", new { id = item.Id }) |
-                                        @Html.ActionLink("Gán danh mục", "CategoryAssign", new { id = item.Id })
-                                    </td>
-                                </tr>
-                            }*@
                     </tbody>
                 </table>
                 <div class="Pager paginationPager"></div>
