--- a/eShop.AdminApp/Views/Home/Index.cshtml
+++ b/eShop.AdminApp/Views/Home/Index.cshtml
@@ -9,8 +9,7 @@
 }
 
 @section Scripts{
-  
-
+    <script src="~/js/controller/home/pagingHomeController.js"></script>
 }
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
