--- a/eShop.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
+++ b/eShop.AdminApp/Views/Shared/Components/Navigation/Default.cshtml
@@ -27,7 +27,7 @@
     </form>
     <form id="frmChangeLanguage" action="/Home/Language" method="post" class="navbar-nav ml-5  ">
         <input type="hidden" name="ReturnUrl" value="@Context.Request.Path" />
-        <select class="form-control" onchange="this.form.submit()" asp-for="CurrentLanguageId"
+        <select id="selectCurrentLanguageId" class="form-control" 
                 asp-items="@(new SelectList(Model.Languages,"Id","Name",Model.CurrentLanguageId))">
         </select>
     </form>
