--- a/eShop.AdminApp/Views/User/TwoFactorAuthentication.cshtml
+++ b/eShop.AdminApp/Views/User/TwoFactorAuthentication.cshtml
@@ -48,7 +48,7 @@
                             <button type="submit" class="btn btn-default">Forget this browser</button>
                         </form>
                     }
-                    <a asp-action="Disable2fa" class="btn btn-default">Disable 2FA</a>
+                    <a asp-action="Disable2fa" asp-controller="Login" class="btn btn-default">Disable 2FA</a>
                     <a asp-action="GenerateRecoveryCodes" class="btn btn-default">Reset recovery codes</a>
                 }
 
