--- a/eShop.WebApp/Views/Account/Login.cshtml
+++ b/eShop.WebApp/Views/Account/Login.cshtml
@@ -16,9 +16,13 @@
             <span asp-validation-for="UserName" class="text-danger"></span>
             <input type="password" name="Password" placeholder="Password" />
             <span asp-validation-for="Password" class="text-danger"></span>
-            <span>
+            <span >
                 <input type="checkbox" asp-for="RememberMe" class="checkbox">
                 Keep me signed in
+            </span>
+            <span style="float: right;">
+                <a asp-action="ForgotPassword" asp-controller="Account" >Quên mật khẩu</a>
+                
             </span>
             <button type="submit" class="btn btn-default">Login</button>
         </form>
