--- a/eShop.AdminApp/Views/User/Index.cshtml
+++ b/eShop.AdminApp/Views/User/Index.cshtml
@@ -54,7 +54,7 @@
                         <form asp-action="Index" method="get">
                             <div class="row">
                                 <div class=" col-md-9">
-                                    <input type="text" value="@ViewBag.Keyword" name="keyword" class="form-control" />
+                                    <input type="text" style="width: auto;float: right;" value="@ViewBag.Keyword" name="keyword" class="form-control" />
                                 </div>
                                 <div class=" col-md-3">
                                     <button type="submit" class="btn btn-primary">Tìm</button>
