--- a/eShop.WebApp/Views/Shared/_Layout.cshtml
+++ b/eShop.WebApp/Views/Shared/_Layout.cshtml
@@ -121,25 +121,35 @@
                                     <li>
                                         <div class="dropdown">
                                             <button class="btn dropdown-toggle" style="margin-top:3px" type="button" data-toggle="dropdown">
-                                                <i class="fa fa-user"></i>Welcome
+                                                <i class="fa fa-user"></i> Welcome
                                                 <strong>@User.Identity.Name</strong>
                                                 <span class="caret"></span>
                                             </button>
                                             <ul class="dropdown-menu">
-                                                <li><a asp-action="ChangePassword" asp-controller="Account">Change password</a></li>
-                                             
+                                                <li>
+                                                    <a asp-action="Profile" asp-controller="Home">
+                                                        <i class="fa fa-key" aria-hidden="true"></i> Profile
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                <li>
+                                                    <a asp-action="ChangePassword" asp-controller="Account">
+                                                        <i class="fa fa-key" aria-hidden="true"></i> Change password
+                                                    </a>
+                                                </li>
+                                                <li>
+                                                    <form action="/@culture/Account/Logout" method="post">
+                                                        <button type="submit" style="padding-right:0;margin-top:10px;margin-bottom:0px;background:transparent;border:none;">
+                                                            <i class="fa fa-lock"></i>
+                                                            Logout
+                                                        </button>
+                                                    </form>
+                                                </li>
                                             </ul>
                                         </div>
                                     </li>
                                     <li><a href=""><i class="fa fa-star"></i> Wishlist</a></li>
-                                    <li>
-                                        <form action="/@culture/Account/Logout" method="post">
-                                            <button type="submit" style="padding-right:0;margin-top:10px;margin-bottom:0px;background:transparent;border:none;">
-                                                <i class="fa fa-lock"></i>
-                                                Logout
-                                            </button>
-                                        </form>
-                                    </li>
+
                                 }
                                 else
                                 {
